--- a/interesting.html
+++ b/interesting.html
@@ -110,7 +110,7 @@
        <iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/sawyer13.1nbg3a08/attribution,zoompan,zoomwheel,geocoder,share.html?access_token=pk.eyJ1Ijoic2F3eWVyMTMiLCJhIjoiY2l1anhzazFmMDE1MTJvbXN1MW9saTM3MyJ9.R7sKUo_t4R5JRo8G5LkHPQ'></iframe>
        
         <p>Mammoth Facts - Twine</p>
-        <tw-story width='100%' height='500px' frameBorder='0' src='https://twinery.org/4fe577bb-433e-44c2-8faf-459dc951a059'></tw-story>
+        <tw width='100%' height='500px' frameBorder='0' src='https://twinery.org/4fe577bb-433e-44c2-8faf-459dc951a059'></tw>
 
         
         <p>Interesting Facts</p>
