--- a/interesting.html
+++ b/interesting.html
@@ -112,15 +112,9 @@
         <p>Mammoth Facts - Twine</p>
         <iframe width='100%' height='500px' frameBorder='0' src='https://twinery.org/2/#stories/f10b681e-b859-70c6-d31e-67b8ea2d84d2'></iframe>
 
-        <tw-story></tw-story>
+        <tw-story>
 
 <tw-storydata name="Mammoths" startnode="1" creator="Twine" creator-version="2.0.11" ifid="6627B1B3-4C67-47BB-8D27-63315C583B56" format="Harlowe" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Mammoths - The Gigantic Blog" tags="" position="572,219">Where are they now?
-
-
-
-
-
-
 
 [[Museums |Museums]] 
 [[Archeological Finds |Archeological Finds]] </tw-passagedata>
@@ -156,9 +150,9 @@
 http://mammothsite.com</tw-passagedata>
 <tw-passagedata pid="9" name="Canada" tags="" position="120,677">Right now the Roayl BC Museum is a wonderful place to go and look at the Mammoth exhibit. They are fortunet enought to have the wonderful Lyuba on display. This is a stop as part of a traveling exhibit. &quot;For the first time ever in Canada, you are able to see Lyuba, a 40,000 year-old baby woolly mammoth. Discovered in Siberia in 2007, Lyuba is the world&#39;s most complete preserved mammoth. This is a remarkable opportunity for visitors to see an animal â€“ now extinct â€“ that once roamed across much of BC.&quot; The community of Victoria is ecstaitic to have such a wonderful exhibit here. </tw-passagedata>
 <tw-passagedata pid="10" name="Yuka" tags="" position="893,660">The brain found in a mammoth that has been nicknamed Yuka is the most intact Mammoth brain ever found. This Mammoth was found in the Siberian permafrost. Yuka was inbetween 6-9 when she died. Becasue of level of intaction of this brain and body there has been a new hope in the cloning of an extinct Mammoth.</tw-passagedata>
-<tw-passagedata pid="11" name=" Lyuba" tags="" position="1070,627">Lyubaâ€™s body was well kept because the Mammoth was buried so quickly after it&#39;s death in fine sediment that sealed it off from the surrounding oxygen. Because of the location of her body was also surounded by acids that were frozen it helped to also preserve some DNA fragments. When the mammoth was alive it would have had a thick coat of brown fur. Its fur fell out during the 42,000 years trapped in ice the bit that remained had turned ginger in the ice.</tw-passagedata>
+<tw-passagedata pid="11" name=" Lyuba" tags="" position="1070,627">Lyuba's body was well kept because the Mammoth was buried so quickly after it's death in fine sediment that sealed it off from the surrounding oxygen. Because of the location of her body was also surounded by acids that were frozen it helped to also preserve some DNA fragments. When the mammoth was alive it would have had a thick coat of brown fur. Its fur fell out during the 42,000 years trapped in ice the bit that remained had turned ginger in the ice.</tw-passagedata>
 </tw-storydata>
-
+</tw-story>
         
         <p>Interesting Facts</p>
         
