--- a/interesting.html
+++ b/interesting.html
@@ -110,7 +110,7 @@
        <iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/sawyer13.1nbg3a08/attribution,zoompan,zoomwheel,geocoder,share.html?access_token=pk.eyJ1Ijoic2F3eWVyMTMiLCJhIjoiY2l1anhzazFmMDE1MTJvbXN1MW9saTM3MyJ9.R7sKUo_t4R5JRo8G5LkHPQ'></iframe>
        
         <p>Mammoth Facts - Twine</p>
-<tw-storydata name="Mammoths" startnode="1" creator="Twine" creator-version="2.0.11" ifid="6627B1B3-4C67-47BB-8D27-63315C583B56" format="Harlowe" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Mammoths - The Gigantic Blog" tags="" position="572,219">
+<tw-storydata name="Mammoths" startnode="1" creator="Twine" creator-version="2.0.11" ifid="6627B1B3-4C67-47BB-8D27-63315C583B56" format="Harlowe" options="" hidden><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Mammoths - The Gigantic Blog" tags="" position="572,219">
 
     Where are they now?
 
